--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -44,5 +44,6 @@ jobs:
       - name: Run Linter
         run: |
           # This command finds all JavaScript files recursively and runs JSHint on them
-          find ./server/database -name "*.js" -exec jshint {} +
+          # Exclude node_modules from linting
+          find ./server/database -name "*.js" ! -path "*/node_modules/*" -exec jshint {} +
           echo "Linted all the js files successfully"
